2001-09-07    <johan@FRIJA>

	* src/SDCCglue.c (emitRegularMap): only delete a symbol when it is a symbol

2001-09-06    <johan@FRIJA>

	* src/SDCC.y: this could be a fix for bug #458744 (1.37)
	* bernhard noted me at this: "() equals to (void)" (1.38)

2001-09-05    <johan@FRIJA>

	* src/SDCCglue.c (emitRegularMap): a fix for bug #458099/2

2001-09-04    <johan@FRIJA>

	* src/SDCCsymt.c (checkSClass): a fix for bug #458099/1


2001-09-04  Paul Stoffregen  <paul@pjrc.com>

	* pragma noinduction broke memcpy on mcs51 large model.  Moved it inside z80 optimization

2001-09-03  Michael Hope  <michaelh@juju.net.nz>

	* link/z80/aslink.h: Fixed path for PATH_MAX

2001-09-02  Michael Hope  <michaelh@juju.net.nz>

	* src/z80/gen.c (fetchLitPair): Changed so that it properly caches direct space references.

	* support/regression/tests/addsub.c: Added cases to cover all the +, - combinations.

	* support/regression/tests/uminus.c: Added a test for the unary minus operator.

	* src/z80/gen.c (genUminus): Fixed add, sub, and uminus on the gbz80 port for longs.  Had to shift some functions about to do it.

2001-09-01  Michael Hope  <michaelh@juju.net.nz>

	* src/z80/gen.c: Fixed up generator to pass the regresion tests, specifically fixing loads for longs, genCmp, and turned on the map file.
	(genCmp): Fixed up genCmp for the GB with longs.

	* device/lib/gbz80/Makefile: Fixed up all the libraries to pass the regression tests.

	* support/regression/ports/host/spec.mk: Updated to compile with the new type specifiers.

	* device/lib/Makefile.in (Z80SOURCES): Removed old _mululong, _mulslong, and unneeded _mulint.

	* device/lib/_mullong.c (_mulslong): Changed to actually return a value :)

2001-08-30  Paul Stoffregen  <paul@pjrc.com>

	* added peepholes 223 to 231 to mcs51 port.  These improve code when using large model.

2001-08-30  Michael Hope  <michaelh@juju.net.nz>
